[gd_scene load_steps=3 format=3 uid="uid://njoxaaqd4vbb"]

[ext_resource type="Script" path="res://addons/GodotHero Chart Reader/Tipbits/BlockyRange.tres.gd" id="1_1vd48"]

[sub_resource type="Gradient" id="Gradient_foqrj"]

[node name="BlockyRange" type="Range"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 3
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = -5.0
max_value = 5.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = true
allow_greater = false
allow_lesser = false
script = ExtResource("1_1vd48")
vertical = true
spacing = 0
gradient = SubResource("Gradient_foqrj")

[node name="box_container" type="BoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
vertical = true

[node name="@ColorRect@66524" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="@ColorRect@66525" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.1, 0.1, 0.1, 1)

[node name="@ColorRect@66526" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.2, 0.2, 0.2, 1)

[node name="@ColorRect@66527" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.3, 0.3, 0.3, 1)

[node name="@ColorRect@66528" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.4, 0.4, 0.4, 1)

[node name="@ColorRect@66529" type="ColorRect" parent="box_container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.5, 0.5, 0.5, 1)

[node name="@ColorRect@69394" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.6, 0.6, 0.6, 1)

[node name="@ColorRect@69395" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.7, 0.7, 0.7, 1)

[node name="@ColorRect@69396" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.8, 0.8, 0.8, 1)

[node name="@ColorRect@69397" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.9, 0.9, 0.9, 1)

[node name="@ColorRect@69398" type="ColorRect" parent="box_container"]
modulate = Color(0.745098, 0.745098, 0.745098, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="value_changed" from="." to="." method="_on_value_changed"]
